syntax = "proto3";
package browserbook;

enum OrderType {
  BUY = 0;
  SELL = 1;
}

message Order {
  string id = 1;
  string from = 2;
  string tokenAddress = 3;
  string tokenId = 4;
  OrderType orderType = 5;
  string price = 6;
  string limitPrice = 7;
  string quantity = 8;
  int32 expiry = 9;
  string signature = 10; // Signature of all previous fields
}

message Match {
  string id = 1;
  string makerId = 2;
  string takerId = 3;
  string makerOrderId = 4;
  string takerOrderId = 5;
  string status = 6;
}